--- a/signup.html
+++ b/signup.html
@@ -1463,11 +1463,46 @@
                                                             <option value="male">February</option>
                                                             <option value="male">March</option>
                                                             <option value="male">April</option>
+                                                            <option value="male">May</option>
+                                                            <option value="male">June</option>
+                                                            <option value="male">July</option>
+                                                            <option value="male">August</option>
+                                                            <option value="male">September</option>
+                                                            <option value="male">October</option>
+                                                            <option value="male">November</option>
+                                                            <option value="male">December</option>
                                                         </select><select class="select-box select-box--primary-style">
                                                             <option selected>Day</option>
                                                             <option value="01">01</option>
                                                             <option value="02">02</option>
                                                             <option value="03">03</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
+                                                            <option value="04">04</option>
                                                             <option value="04">04</option>
                                                         </select><select class="select-box select-box--primary-style">
                                                             <option selected>Year</option>
